--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   opacity: 1;
   background-color: #0f766e;
 }
+
+
+.font-regular {
+  font-family: "Manufacturing Consent", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
