--- a/src/index.css
+++ b/src/index.css
@@ -255,8 +255,14 @@
 * {
   box-sizing: border-box;
 }
+body{
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
-.font-regular {
+/* .font-regular {
   font-family: "Manufacturing Consent", system-ui;
   font-weight: 400;
   font-style: normal;
@@ -377,4 +383,4 @@
   font-family: "My Soul", cursive;
   font-weight: 400;
   font-style: normal;
-}
+} */
