--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,14 @@ body{
   font-style: normal;
 }
 
+.raleway {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 /* .font-regular {
   font-family: "Manufacturing Consent", system-ui;
   font-weight: 400;
